# fine-grained-apple-classification

./: .gitignore  GROUP 3_ COM8430 PHASE 3 REPORT.docx  GROUP 3_ COM8430 PHASE 4 REPORT.docx  README.md
capture_robot_image/: setup.py
capture_robot_image/capture_topic/: capture_sub.py
robot_image_classifier/: package.xml  setup.cfg  setup.py
robot_image_classifier/image_classification/: inference.py  model_wrapper.py
src/capture_robot_image/: package.xml  setup.py
src/robot_image_classifier/: package.xml  setup.py
src/robot_image_classifier/image_classification/: inference.py  model_wrapper.py
