<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_classification</name>
  <version>0.0.0</version>
  <description>ROS2 package for fine-grained fruit classification using deep learning. Implements a real-time inference node that classifies fruits from camera images and triggers robot actions based on detected fruit types. Uses a fine-tuned EfficientNet-B0 model for classification.</description>
  <maintainer email="maintainer@example.com">Fine-Grained Fruit Classification Project</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  
  <exec_depend>torch</exec_depend>
  <exec_depend>torchvision</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>pillow</exec_depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
